changed title and sample recipes

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>AI Quick Recipe Generator</title>
+    <title>AI Dessert Recipe Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI Quick Recipe Generator 👩🏼‍🍳</h1>
+        <h1>AI Dessert Recipe Generator 👩🏼‍🍳</h1>
       </header>
       <main>
         <div class="form-container">
@@ -29,8 +29,7 @@
           </form>
 
           <div class="hint">
-            i.e. seafood paella, Schnitzel, bolognese sauce, waffles, margarita
-            pizza etc.
+            i.e. chocolate mouse, crème brûlée, apple pie, strawberry cake etc.
           </div>
         </div>
         <div class="recipe hidden" id="recipe"></div>
@@ -42,6 +41,12 @@
         <a href="x" target="_blank">open sourced on GitHub</a>
         and hosted on
         <a href="x" target="_blank">Netlify</a>
+        <p>
+          Picture by
+          <a href="https://unsplash.com/@brookelark" target="_blank">
+            Broke Lark</a
+          >
+        </p>
       </footer>
     </div>
     <script src="src/index.js"></script>
