fixed css, added image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </form>
 
           <div class="hint">
-            i.e. chocolate mouse, crème brûlée, apple pie, strawberry cake etc.
+            i.e. chocolate mousse, crème brûlée, apple pie, strawberry cake etc.
           </div>
         </div>
         <div class="recipe hidden" id="recipe"></div>
@@ -43,7 +43,11 @@
         <a href="x" target="_blank">Netlify</a>
         <p>
           Picture by
-          <a href="https://unsplash.com/@brookelark" target="_blank">
+          <a
+            href="https://unsplash.com/@brookelark"
+            target="_blank"
+            class="image"
+          >
             Broke Lark</a
           >
         </p>
