--- a/index.html
+++ b/index.html
@@ -38,9 +38,17 @@
         This AI project was coded by
         <a href="https://github.com/Stella5791" target="_blank">Stella Bullo</a
         >; it is
-        <a href="x" target="_blank">open sourced on GitHub</a>
+        <a
+          href="https://github.com/Stella5791/AI-recipe-generator"
+          target="_blank"
+          >open sourced on GitHub</a
+        >
         and hosted on
-        <a href="x" target="_blank">Netlify</a>
+        <a
+          href="https://app.netlify.com/sites/ai-quick-dessert-recipe-generator-ste/overview"
+          target="_blank"
+          >Netlify</a
+        >
         <p>
           Picture by
           <a
@@ -48,7 +56,7 @@
             target="_blank"
             class="image"
           >
-            Broke Lark</a
+            Brooke Lark</a
           >
         </p>
       </footer>
